// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with type = image 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
>
  <View
    style={
      Object {
        "backgroundColor": "#FFF",
        "borderRadius": 20,
        "elevation": 1,
        "flex": 0,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "height": "auto",
        "justifyContent": "space-between",
        "marginBottom": 0,
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 10,
        "padding": 20,
        "shadowColor": "black",
        "shadowOffset": Object {
          "height": 2,
        },
        "shadowOpacity": 0.1,
        "width": 710,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "width": 200,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "data:image/jpeg;base64,undefined",
          }
        }
        style={
          Object {
            "alignSelf": "center",
            "aspectRatio": 1,
            "borderColor": "#f3f3f3",
            "borderRadius": 10,
            "borderWidth": 2,
            "marginLeft": -30,
            "width": 170,
          }
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#FF0040",
            "marginTop": 10,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flex": 1,
          "justifyContent": "center",
          "width": 40,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFF",
              "borderColor": "#bcbcbc",
              "borderRadius": 10,
              "borderWidth": 2,
              "height": 40,
              "justifyContent": "center",
              "width": 40,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly with type = image 2`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
>
  <View
    style={
      Object {
        "backgroundColor": "#FFF",
        "borderRadius": 20,
        "elevation": 1,
        "flex": 0,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "height": "auto",
        "justifyContent": "space-between",
        "marginBottom": 0,
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 10,
        "padding": 20,
        "shadowColor": "black",
        "shadowOffset": Object {
          "height": 2,
        },
        "shadowOpacity": 0.1,
        "width": 710,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "width": 200,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 17,
            "fontWeight": "bold",
          }
        }
      >
        🏃🏻‍♂️ 
        0
         of 
        0
         steps
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#FF0040",
            "marginTop": 10,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flex": 1,
          "justifyContent": "center",
          "width": 40,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFF",
              "borderColor": "#bcbcbc",
              "borderRadius": 10,
              "borderWidth": 2,
              "height": 40,
              "justifyContent": "center",
              "width": 40,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly with type = text 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
>
  <View
    style={
      Object {
        "backgroundColor": "#FFF",
        "borderRadius": 20,
        "elevation": 1,
        "flex": 0,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "height": "auto",
        "justifyContent": "space-between",
        "marginBottom": 0,
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 10,
        "padding": 20,
        "shadowColor": "black",
        "shadowOffset": Object {
          "height": 2,
        },
        "shadowOpacity": 0.1,
        "width": 710,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "width": 200,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 17,
            "fontWeight": "bold",
          }
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#FF0040",
            "marginTop": 10,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flex": 1,
          "justifyContent": "center",
          "width": 40,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFF",
              "borderColor": "#bcbcbc",
              "borderRadius": 10,
              "borderWidth": 2,
              "height": 40,
              "justifyContent": "center",
              "width": 40,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
